--- a/client/src/css/app.sass
+++ b/client/src/css/app.sass
@@ -104,7 +104,7 @@ th.text-right,
 // Light Mode
 // ----------
 
-.body--light
+body.body--light
     .text--grey
         color: $dark-grey
 
@@ -142,6 +142,9 @@ th.text-right,
     .q-tab--active
         color: $dark
         background-color: $active
+
+    .q-table th
+        background: #eee
 
 // ---------
 // Dark Mode
@@ -289,6 +292,9 @@ body.body--dark
     .text-negative .q-field__label
         color: #ff6e9f !important
 
+    .q-table th
+        background: $dark-2
+
 @media (prefers-reduced-motion)
     *
         transition: none !important
@@ -326,4 +332,3 @@ body.body--dark
     color: $dark-6 !important
 .bg-dark-6
     background: $dark-6 !important
-
